# chaty-proto

./: .gitignore  Cargo.toml  Makefile  README.md  buf.gen.yaml  buf.yaml  build.rs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: publish.yml
scripts/: gen-barrels.ts
service/v1/: bots_db.proto  channels_db.proto  groups.proto  main.proto  messages.proto  messages_db.proto  roles_db.proto  search.proto  server_members_db.proto  servers_db.proto  users.proto  users_db.proto
shared.v1/v1/: error.proto
shared/v1/: files.proto  pagination.proto  struct.proto  time.proto  types.proto  wrappers.proto
users/v1/: auth.proto  users.proto
wrappers/: lib.rs
wrappers/proto-crate/: Cargo.toml  README.md
wrappers/proto-crate/src/: lib.rs  service.v1.rs  shared.v1.rs  users.v1.rs
wrappers/proto-npm/: README.md  package.json
wrappers/proto-npm/src/: index.ts
wrappers/proto-npm/src/node/: index.ts
wrappers/proto-npm/src/node/service/v1/: bots_db.ts  channels_db.ts  groups.ts  index.ts  main.ts  messages.ts  messages_db.ts  roles_db.ts  search.ts  server_members_db.ts  servers_db.ts  users.ts  users_db.ts
wrappers/proto-npm/src/node/shared/v1/: error.ts  files.ts  index.ts  pagination.ts  struct.ts  time.ts  types.ts  wrappers.ts
wrappers/proto-npm/src/node/users/v1/: auth.ts  users.ts
wrappers/proto-npm/src/web/: index.ts
wrappers/proto-npm/src/web/service/v1/: bots_db_pb.ts  channels_db_pb.ts  groups_pb.ts  index.ts  main.ts  main_pb.ts  messages_db_pb.ts  messages_pb.ts  roles_db_pb.ts  search_pb.ts  server_members_db_pb.ts  (+4 more)
(+12 files in other folders)
