[package]
name = "chaty-proto"
version = "0.1.22"
edition = "2021"
description = "Generated gRPC protobuf definitions for Chaty"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ahmad-khatib0-org/chaty-proto"
readme = "README.md"
keywords = ["protobuf", "tonic", "grpc", "chaty"]
categories = ["api-bindings", "network-programming"]
publish = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
serde = { version = "1.0.219" , features = ["derive"] }

[lib]
name = "chaty_proto"
path = "src/lib.rs"
